# XD-AIGC-agent

./: .dockerignore  .env.example  .env.example.prod  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  debug_ws.py  pyproject.toml
.github/workflows/: ci.yml
ci/: check-banned-apis.sh  check-transcript-fixtures.py
deploy/: cron-pull-skills.sh  xd-aigc-agent.service
docs/: AGENT-HARNESS-REFORM-OPEN-ITEMS.md  AGENT-HARNESS-REFORM-PLAN.md  AGENT-HARNESS-REFORM-RUNTIME.md  AGENT-HARNESS-REFORM-SPEC.md  ARCHITECTURE.md  CODE-REVIEW-GUIDE.md  DEPLOY.md  L20-1-SERVICES.md  PHASE.md  RUNTIME-DRY-RUN.md  RUNTIME-MONITORING.md  SKILL-SPEC.md
scripts/: healthcheck.py
skills/: frame-bg-remover.yaml
skills/xd-poster-gen-skill/: README.md  SKILL.md
src/: config.py  main.py  monitoring.py  runtime_dry_run.py  runtime_rollout.py
src/conversation/: __init__.py  classifier.py  option_resolver.py  options.py  response.py  session.py  state_machine.py
tests/: test_actions.py  test_allowlist.py  test_background_worker.py  test_concurrency.py  test_conversation_session.py  test_e2e.py  test_executor.py  test_job_controller.py  test_main.py  test_mivo_mcp.py  test_monitoring.py  test_observation.py  test_option_resolver.py  test_orchestrator.py  test_registry.py  test_response_composer.py  test_runtime_dry_run.py  test_runtime_rollout.py  test_schema.py  test_session.py  test_skill_runtime.py  test_state_machine.py  test_step1_cache.py  test_transcript_runner.py  test_turn_classifier.py  test_value_provenance.py  transcript_runner.py
tools/: mock_toolbox.py
(+55 files in other folders)
